--- a/front2/package.json
+++ b/front2/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@bazzite/nuxt-optimized-images": "^0.3.0",
+    "@nuxtjs/axios": "^5.11.0",
+    "@nuxtjs/proxy": "^2.0.0",
     "axios": "^0.19.2",
     "nuxt": "^2.0.0",
     "vue": "^2.6.11"
