--- a/front2/package.json
+++ b/front2/package.json
@@ -5,7 +5,7 @@
   "author": "Layerdrops",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt --port 6733",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/proxy": "^2.0.0",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "nuxt": "^2.0.0",
     "vue": "^2.6.11"
   },
