--- a/admin/package.json
+++ b/admin/package.json
@@ -23,6 +23,7 @@
     "firebase": "^6.0.4",
     "instantsearch.css": "^7.3.1",
     "jsonwebtoken": "^8.5.1",
+    "laravel-vue-pagination": "^2.3.1",
     "material-icons": "^0.3.1",
     "perfect-scrollbar": "^1.4.0",
     "postcss-rtl": "^1.5.0",
