--- a/front2/package.json
+++ b/front2/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@bazzite/nuxt-optimized-images": "^0.3.0",
-    "@nuxtjs/axios": "^5.11.0",
+    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/axios": "^5.12.1",
     "@nuxtjs/proxy": "^2.0.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "nuxt": "^2.0.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuejs-datepicker": "^1.6.2"
   },
   "devDependencies": {}
 }
