--- a/admin/package.json
+++ b/admin/package.json
@@ -16,16 +16,19 @@
     "apexcharts": "^3.6.12",
     "auth0-js": "^9.10.4",
     "axios": "^0.19.0",
+    "bootstrap": "^4.5.2",
     "chart.js": "^2.8.0",
     "core-js": "2.6.5",
     "echarts": "^4.2.1",
     "file-saver": "2.0.1",
     "firebase": "^6.0.4",
     "instantsearch.css": "^7.3.1",
+    "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "laravel-vue-pagination": "^2.3.1",
     "material-icons": "^0.3.1",
     "perfect-scrollbar": "^1.4.0",
+    "popper.js": "^1.16.1",
     "postcss-rtl": "^1.5.0",
     "prismjs": "^1.16.0",
     "vee-validate": "^2.2.8",
