--- a/admin/package.json
+++ b/admin/package.json
@@ -57,6 +57,7 @@
     "vue-simple-calendar": "^4.2.2",
     "vue-simple-suggest": "^1.9.5",
     "vue-star-rating": "^1.6.1",
+    "vue-tinymce-editor": "^1.6.2",
     "vue-tour": "^1.1.0",
     "vue-tree-halower": "^1.8.0",
     "vue-video-player": "^5.0.2",
