--- a/front2/package.json
+++ b/front2/package.json
@@ -23,5 +23,7 @@
     "vue-easy-slider": "^5.3.4",
     "vuejs-datepicker": "^1.6.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/vuetify": "^1.11.2"
+  }
 }
