--- a/front2/package.json
+++ b/front2/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.6.11",
     "vue-content-loading": "^1.6.0",
     "vue-easy-slider": "^5.3.4",
+    "vue-notification": "^1.3.20",
     "vuejs-datepicker": "^1.6.2"
   },
   "devDependencies": {
