--- a/front2/package.json
+++ b/front2/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "nuxt": "^2.0.0",
+    "nuxt-leaflet": "0.0.22",
     "vue": "^2.6.11",
     "vue-content-loading": "^1.6.0",
     "vue-easy-slider": "^5.3.4",
